--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,11 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- task: DotNetCoreCLI@2
+  displayName: Restore
+  inputs:
+    command: restore
+    projects: '$(Parameters.RestoreBuildProjects)'
 - task: SonarCloudPrepare@1
   displayName: 'Prepare Analysis Configuration'
   inputs:
@@ -28,14 +33,6 @@ steps:
     projects: '**/*.csproj'
     arguments: '--configuration $(BuildConfiguration)'
 
-- task: SonarCloudAnalyze@1
-  displayName: 'Run Code Analysis on SonarCloud'
-
-- task: SonarCloudPublish@1
-  displayName: 'Publish Quality Gate Result on SonarCloud'
-  inputs:
-    pollingTimeoutSec: '300'
-
 - task: DotNetCoreCLI@2
   displayName: Test
   inputs:
@@ -50,6 +47,15 @@ steps:
     publishWebProjects: True
     arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
     zipAfterPublish: True
+
+- task: SonarCloudAnalyze@1
+  displayName: 'Run Code Analysis on SonarCloud'
+
+- task: SonarCloudPublish@1
+  displayName: 'Publish Quality Gate Result on SonarCloud'
+  inputs:
+    pollingTimeoutSec: '300'
+
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact to drop'
