Update azure-pipelines-3.yml for Azure Pipelines
#Changed master to master1 just to ignore auto run after each commit
trigger:
- master1

--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -2,8 +2,9 @@
 # Build and push an image to Azure Container Registry
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
+#Changed master to master1 just to ignore auto run after each commit
 trigger:
-- master
+- master1
 
 resources:
 - repo: self
