--- a/deployment.yaml
+++ b/deployment.yaml
@@ -26,10 +26,11 @@ metadata:
   labels:
     app: cosmos
 spec:
+  externalTrafficPolicy: Local
   selector:
     app: cosmos
   ports:
   - protocol: TCP
     port: 80    
     targetPort: 8080
-  type: ClusterIP
+  type: LoadBalancer
