--- a/deployment.yaml
+++ b/deployment.yaml
@@ -38,8 +38,19 @@ spec:
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: basic-ingress
+  name: my-ingress
+  annotations:
+    # If the class annotation is not specified it defaults to "gce".
+    kubernetes.io/ingress.class: "gce"
 spec:
-  backend:
-    serviceName: gke-service
-    servicePort: 8080
+  rules:
+  - http:
+      paths:
+      - path: /*
+        backend:
+          serviceName: gke-service
+          servicePort: 80
+      - path: /kube
+        backend:
+          serviceName: gke-service
+          servicePort: 80
