--- a/deployment.yaml
+++ b/deployment.yaml
@@ -33,6 +33,7 @@ spec:
   - protocol: TCP
     port: 80    
     targetPort: 80
+  type: NodePort
 ---
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
